// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom render gives all relevant info to scoped slot 1`] = `
<div class="ais-CurrentRefinements">
  <div>
    <ul>
      <li>
        brands:
        <button>
          apple ╳
        </button>
      </li>
      <li>
        colors:
        <button>
          red ╳
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`custom render item slot gives all relevant info to scoped slot 1`] = `
<div class="ais-CurrentRefinements">
  <ul class="ais-CurrentRefinements-list">
    <li class="ais-CurrentRefinements-item">
      <div>
        brands:
        <button>
          apple
        </button>
      </div>
    </li>
    <li class="ais-CurrentRefinements-item">
      <div>
        colors:
        <button>
          red
        </button>
      </div>
    </li>
  </ul>
</div>
`;
